[project]
name = "fontimize"
version = "0.8.6"
authors = [
  { name="David Millington", email="vintagedave@gmail.com" },
]
description = "Easily create font subsets containing only characters used in your text or website"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Topic :: Text Processing :: Fonts"
]
keywords = ["font", "glyphs", "characters", "minimize", "minimizer", "minimization", "optimize", "optimization", "subset", "ssg", "web"]
dependencies = [
  "os",
  "sys",
  "bs4",
  "ttf2web",
  "tinycss2",
  "typing",
  "pathlib",
  "pathvalidate",
  "unittest"
]

[project.urls]
Homepage = "https://github.com/vintagedave/fontimize"
Issues = "https://github.com/vintagedave/fontimize/issues"
Website = "https://fontimize.daveon.design"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "*.py",
  "LICENSE",
  "readme.md",
  "/images"
]
exclude = [
  "/cmdout",
  "/tests/output",
  "/__pycache__",
  "tests.py"
]

[tool.hatch.build.targets.wheel]
packages = ["fontimize.py"]
